--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-paper": "^5.0.0-rc.3",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.14.0",
     "swr": "^2.0.0-beta.6",
     "text-encoding": "^0.7.0"
   },
