--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ExampleApp",
-  "displayName": "Example Solana React Native App"
+  "name": "CaptureToEarnApp",
+  "displayName": "A decentralized 'Capture to Earn' android mobile app for people who love taking photos"
 }
