--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@solana/wallet-adapter-base": "^0.9.8",
     "@solana/wallet-adapter-react": "^0.15.7",
     "@solana/web3.js": "^1.48.0",
+    "@types/react-native-vector-icons": "^6.4.11",
     "js-base64": "^3.7.2",
     "localstorage-polyfill": "^1.0.1",
     "react": "^18.0.0",
     "react-native": "^0.69.0",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.0.0-rc.3",
+    "react-native-pressable-opacity": "^1.0.10",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-static-safe-area-insets": "^2.1.2",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.14.0",
