--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@solana-mobile/mobile-wallet-adapter-protocol": "file:../../js/packages/mobile-wallet-adapter-protocol",
@@ -19,6 +20,7 @@
     "@solana/wallet-adapter-react": "^0.15.7",
     "@solana/web3.js": "^1.48.0",
     "@types/react-native-vector-icons": "^6.4.11",
+    "add": "^2.0.6",
     "js-base64": "^3.7.2",
     "localstorage-polyfill": "^1.0.1",
     "react": "^18.0.0",
@@ -34,7 +36,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.14.0",
     "swr": "^2.0.0-beta.6",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
