feature: 1. add import of react-native-vector-icon to build.gradle 2. add button on camera page 3. implement flash button

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/cameraroll": "^4.1.1",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@solana-mobile/mobile-wallet-adapter-protocol": "file:../../js/packages/mobile-wallet-adapter-protocol",
@@ -21,9 +21,11 @@
     "@solana/web3.js": "^1.48.0",
     "@types/react-native-vector-icons": "^6.4.11",
     "add": "^2.0.6",
+    "fbjs": "^3.0.4",
     "js-base64": "^3.7.2",
     "localstorage-polyfill": "^1.0.1",
     "react": "^18.0.0",
+    "react-feather": "^2.0.10",
     "react-native": "^0.69.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
