feature: save photo only in app files

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.0.0",
     "react-feather": "^2.0.10",
     "react-native": "^0.69.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.0.0-rc.3",
