--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-pager-view": "^5.4.25",
     "react-native-paper": "^5.0.0-rc.3",
+    "react-native-paper-tabs": "^0.7.0",
     "react-native-pressable-opacity": "^1.0.10",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
