--- a/ios/ExampleApp/Info.plist
+++ b/ios/ExampleApp/Info.plist
@@ -59,6 +59,8 @@
 		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-SemiBold.ttf</string>
 		<string>Montserrat-SemiBoldItalic.ttf</string>
+		<string>Montserrat-Medium.ttf</string>
+		<string>Montserrat-MediumItalic.ttf</string>
 	</array>
 </dict>
 </plist>
