--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -14,6 +14,14 @@
       "sha1": "4ee8f07c7414009645d03d87cd72df15658fe9f4"
     },
     {
+      "path": "assets/fonts/Montserrat-Medium.ttf",
+      "sha1": "6b57d12e018c64352e202f8ef3bf7f431f76d935"
+    },
+    {
+      "path": "assets/fonts/Montserrat-MediumItalic.ttf",
+      "sha1": "8b2c464e42f07fc307fddb9c58d202ecff19be2a"
+    },
+    {
       "path": "assets/fonts/Montserrat-Regular.ttf",
       "sha1": "de57aa03e4821fdbe6c34ec2c895e8b5c914e837"
     },
