--- a/ios/ExampleApp/Info.plist
+++ b/ios/ExampleApp/Info.plist
@@ -61,6 +61,7 @@
 		<string>Montserrat-SemiBoldItalic.ttf</string>
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-MediumItalic.ttf</string>
+		<string>Montserrat-ExtraBold.ttf</string>
 	</array>
 </dict>
 </plist>
