--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -10,6 +10,10 @@
       "sha1": "ed5e533b6571e33adb6d01298cb8d1a5a2466657"
     },
     {
+      "path": "assets/fonts/Montserrat-ExtraBold.ttf",
+      "sha1": "1914bc1981e6ceceadb2f6d72455b4e89e04965c"
+    },
+    {
       "path": "assets/fonts/Montserrat-Italic.ttf",
       "sha1": "4ee8f07c7414009645d03d87cd72df15658fe9f4"
     },
