--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preinstall": "rm -rf node_modules/ && (cd ../../js/ && yarn && yarn build)",
-    "link-asset":"react-native-asset"
+    "link-assets": "react-native-asset"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
